# bnb-pep

./: .gitignore  README.md  pyproject.toml
bnb_pep/: __init__.py
bnb_pep/core/: gram.py  inner_pep.py  measures.py  outer_bnb.py
bnb_pep/dsl/: __init__.py
bnb_pep/function_classes/: __init__.py
bnb_pep/solvers/: common.py  qcqp_solver.py  sdp_solver.py
bnb_pep/utils/: performance.py
examples/: ex0_pesto_style.py  ex1_strongly_convex_gradient.py  ex2_no_momentum.py  ex3_nonconvex_gradient.py
tests/: test_bnb_pep.py
