[project]
name = "bnb-pep"
version = "0.1.0"
description = "Branch-and-Bound Performance Estimation Programming for convex optimization"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "cvxpy>=1.3",
]

[project.optional-dependencies]
mosek = ["mosek"]
gurobi = ["gurobipy"]
dev = ["pytest"]
